--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Firebase Chat</string>
+    <string name="app_name">Cloud Chat</string>
 
+    <string name="action_settings">Settings</string>
+    <string name="hint">Type Message here</string>
+
+
+    <string name="title">(Android Chat App using cloud)</string>
+    <string name="author_name">By Sravan kumar</string>
+    <string name="author_url">www.techbus.co</string>
+    <string name="enter_name">Enter your name</string>
+    <string name="btn_join">JOIN</string>
+    <string name="btn_send">Send</string>
 </resources>
